Fixed Layout Issues

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -2,7 +2,7 @@
   background-color: #0a285d; 
   color: #ccc; 
   padding: 40px 0; 
-  margin-top: 40px;
+  margin-top: 0px;
   flex-wrap: wrap;
   overflow-x: hidden; 
 }
