--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  padding-top: 70px; 
+  padding-top: 100px; 
 }
 
 .container {
