--- a/src/styles/trainCard.css
+++ b/src/styles/trainCard.css
@@ -4,7 +4,7 @@
     border: 1px solid #ccc;
     border-radius: 8px;
     padding: 16px;
-    margin-top: 20px;
+    margin-bottom: 20px;
     background-color: #fff;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
     display: flex; 
